# Testing

./: .gitignore  README.md  requirements_dev.txt  setup.cfg
.github/workflows/: tests.yml  workflow.yml
src/data_structures/: linked_list.py
tests/: conftest.py  test_linked_list.py  test_linked_list_node.py
