[metadata]
name = data_structures

[options]
packages =
    data_structures
install_requires =
    black>=20.8b0
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
data_structures = py.typed

[flake8]
max-line-length = 160